# Raices_vivas

./: GUIA_ESTUDIANTE.md  PROYECTO_COMPLETO.md  README_DJANGO.md  app.py  create_superuser.py  forms.py  manage.py  models.py  pyproject.toml  render.yaml  replit.md  requirements.txt  routes.py  utils.py
WayuuArtesania/: replit.md
api/: admin.py  models.py  serializers.py  template_urls.py  template_views.py  urls.py  utils.py  views.py
attached_assets/: Pasted--with-expected-at-least-one-variable-assignment-Request-Method-GET-Request-URL-http-e3f1cf97--1753457142078_1753457142078.txt  Pasted-DisallowedHost-at-Invalid-HTTP-HOST-header-5ac86767-2793-4706-8bb0-700f9bfad75c-00-3v8i19osd7g9-1753448435270_1753448435272.txt  Pasted-DisallowedHost-at-Invalid-HTTP-HOST-header-5ac86767-2793-4706-8bb0-700f9bfad75c-00-3v8i19osd7g9-1753449400426_1753449400426.txt  Pasted-Exception-in-thread-django-main-thread-Traceback-most-recent-call-last-File-nix-store-7d08-1753456280308_1753456280308.txt  Pasted-Exception-in-thread-django-main-thread-Traceback-most-recent-call-last-File-nix-store-7d08-1753463870620_1753463870621.txt  Pasted-NoReverseMatch-at-Reverse-for-login-view-not-found-login-view-is-not-a-valid-view-function-o-1753457436939_1753457436940.txt  Pasted-NoReverseMatch-at-Reverse-for-login-view-not-found-login-view-is-not-a-valid-view-function-o-1753464261585_1753464261585.txt  Pasted-NoReverseMatch-at-Reverse-for-logout-view-not-found-logout-view-is-not-a-valid-view-function-1753495584801_1753495584802.txt  (+18 more)
frontend/: package.json
templates/: 404.html  500.html  base.html  (+16 more)
(+25 files in other folders)
